fix(style): add fixed padding to prevent input width shift on validation

--- a/src/assets/scss/pages/_shopping-cart.scss
+++ b/src/assets/scss/pages/_shopping-cart.scss
@@ -191,6 +191,9 @@
 }
 
 input.form-control {
+  &.checkout-form-control {
+    padding-right: 36px;
+  }
   &.cart-card-number {
     width: 230px;
   }
